ビルドの構造を変更

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,19 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(NotepadSh VERSION 0.1.0)
 
+# SubDirectories
+add_subdirectory(Frame)
+
 # Wxwidgets
 find_package(wxWidgets REQUIRED COMPONENTS net core base)
+message(${wxWidgets_USE_FILE})
 include(${wxWidgets_USE_FILE})
 
 
 add_executable(NotepadSh
- src/main.cpp
- src/MyApp.cpp
- src/MyFrame.cpp
+ main.cpp
+ MyApp.cpp
 )
 include_directories("src/include/")
 target_link_libraries(NotepadSh ${wxWidgets_LIBRARIES})
+target_link_libraries(NotepadSh ${frame_LIBRARIES})
