--- a/src/Frame/CMakeLists.txt
+++ b/src/Frame/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(uftree_lib)
-add_library(uftree STATIC ./src/MyFrame.cpp)
-target_compile_features(uftree PRIVATE cxx_std_11)
-target_include_directories(uftree INTERFACE ./include)
+project(Frame)
+add_library(frame STATIC ./src/MyFrame.cpp)
+target_compile_features(frame PRIVATE cxx_std_11)
+target_include_directories(frame INTERFACE ./include)
