ルートのCMakeListsを修正

--- a/NotepadSh/CMakeLists.txt
+++ b/NotepadSh/CMakeLists.txt
@@ -10,10 +10,9 @@ add_subdirectory(Frame)
 
 # Sources
 add_executable(NotepadSh
- main.cpp
- MyApp.cpp
+ src/main.cpp
+ src/MyApp.cpp
 )
-add_library(Frame STATIC ./src/MyFrame.cpp)
 
 target_include_directories(NotepadSh INTERFACE "./include/")
 target_include_directories(NotepadSh INTERFACE "./Frame/include/")
