--- a/NotepadSh/Frame/CMakeLists.txt
+++ b/NotepadSh/Frame/CMakeLists.txt
@@ -7,5 +7,5 @@ include(${wxWidgets_USE_FILE})
 
 # Sources
 add_library(Frame STATIC ./src/MyFrame.cpp)
-target_include_directories(Frame INTERFACE "./include")
+target_include_directories(Frame INTERFACE ./include)
 target_link_libraries(Frame ${wxWidgets_LIBRARIES})
