フォーマット

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,14 @@
 subdir('App')
 subdir('Frame')
 
-wx = dependency('wxwidgets', required : true)
-
 executable(
   'calculator', ['main.cpp'],
   include_directories: includes,
-  link_with: [Frame_lib,App_lib],
-  dependencies:[wx]
+  link_with: [
+    Frame_lib,
+    App_lib
+  ],
+  dependencies:[
+    dependency('wxwidgets', required : true)
+  ]
 )
