いろいろとりあえず動くようにしゅうせい

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,14 +1,10 @@
-subdir('App')
-subdir('Frame')
+subdir('Application')
 
 executable(
   'calculator', ['main.cpp'],
   include_directories: includes,
-  link_with: [
-    Frame_lib,
-    App_lib
-  ],
   dependencies:[
-    dependency('wxwidgets', required : true)
+    dependency('wxwidgets', required : true),
+    App
   ]
 )
