meson系ファイルを変更

--- a/meson.build
+++ b/meson.build
@@ -2,5 +2,7 @@ project(
   'NotepadSh', 'cpp',
   default_options: ['warning_level=3','cpp_std=c++11'])
 
-includes = include_directories('src/')
+wx=dependency('wxwidgets', required : true)
+
+includes = [include_directories('src/')]
 subdir('src')
