いろいろ変更

--- a/NotepadSh/Frame/meson.build
+++ b/NotepadSh/Frame/meson.build
@@ -1,12 +1,12 @@
 includes+=include_directories('.')
 
-App_lib=library(
-  'App', ['MyApp.cpp','MyFrame.cpp'],
+Frame_lib=library(
+  'Frame', ['MyFrame.cpp','MyFrame.cpp'],
   include_directories: includes,
   dependencies:[wx]
 )
 
-App=declare_dependency(
-  link_with : App_lib,
+Frame=declare_dependency(
+  link_with : Frame_lib,
   include_directories : includes
 )
