ファイルの移動によって起きたエラーの修正

--- a/NotepadSh/Frame/meson.build
+++ b/NotepadSh/Frame/meson.build
@@ -1,7 +1,7 @@
 includes+=include_directories('.')
 
 Frame_lib=library(
-  'Frame', ['MyFrame.cpp','MyFrame.cpp'],
+  'Frame', ['MyFrame.cpp'],
   include_directories: includes,
   dependencies:[wx]
 )
