chore: simplize and fix

--- a/NotepadSh/meson.build
+++ b/NotepadSh/meson.build
@@ -8,6 +8,7 @@ executable(
     'MyFrame.cpp'
   ],
   dependencies:[
-    dependency('wxwidgets', required : true),
-  ]
+    wx
+  ],
+  include_directories:includes
 )
